<resources>
    <string name="app_name">coralConnect</string>
    <string name="btn_all">semua</string>
    <string name="btn_famous">popular</string>
    <string name="btn_new">paling baru</string>

    // data for user in this field
    <string name="name_user"><b>Amin Rais</b></string>
    <string name="job_user">Pecinta Lingkungan</string>
    <string name="since_user">Since 2019</string>
    <string name="title_content"><b>Menjaga Kecantikan Bawah Laut: Kisahku</b></string>
    <string name="desc_content">
        Dian tumbuh besar di pesisir kecil sebuah pulau\n terpencil
        di Indonesia. Sejak kecil, dia selalu terpesona oleh
        keindahan alam bawah laut\nyang luar biasa di sekitarnya. Terumbu karang yang berwarna-warni dan kehidupan laut
        yang\nberlimpah menjadi teman ajaibnya sejak usia dini.. Baca Selengkapnya.
    </string>
    <string name="message">message</string>
    <string name="user_icon">user icon</string>
    <string name="image_content">image content</string>
    <string name="like_count">189K</string>
    <string name="count_comment">200k</string>
    <string name="count_share">100k</string>
    <string name="cari_topik_disini">cari topik disini</string>
    <string name="solar_like_outline_vektor">solar like outline vektor</string>
    <string name="comment_section">comment section</string>
    <string name="share_section">share section</string>
    <string name="like_section">like section</string>

    <string name="searchbar_hint">Cari topik disini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categori">categori</string>

    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_coach">Siapa pelatih tersukses Machester United?</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
    <string name="ini_event">ini event</string>
    <string name="ini_home">ini home</string>
    <string name="ini_notif">ini notif</string>
    <string name="ini_profile">ini profile</string>
    <string name="ini_camera">ini camera</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="camera">Camera</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="layanan_masyarakat_terhap_pemerintah"><b>Layanan masyarakat terhap pemerintah</b></string>
    <string name="jati_nangor_bandung">Jati Nangor, Bandung</string>
    <string name="join">Join</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_consequuntur_labore_deserunt_obcaecati_asperiores_perspiciatis_omnis_deserunt_officiis_nesciunt_est_aut">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur labore deserunt obcaecati asperiores! Perspiciatis omnis deserunt officiis nesciunt est aut.</string>
    <string name="_22_11_2024">22/11/2024</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="logo_coral">logo coral</string>
    <string name="connect_each_other">Connect Each Other</string>
    <string name="desc_obboarding">Connecting with the coral reef conservation community through the CoralConnect app brings us one step</string>
    <string name="start">Start</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continuerr">Continue</string>
    <string name="continue2">Continue</string>
    <string name="submit_login">Continue</string>
    <string name="copyright"><![CDATA[By continuing I agree with Privacy Policy and Terms & Conditions]]></string>
    <string name="continue_with_apple">Continue with apple</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="continue_with_username">Continue with username</string>
    <string name="or">----------------- Or -----------------</string>
    <string name="forgot_passwort">Forgot passwort?</string>
    <string name="arrows_back">arrows back</string>
    <string name="log_in_or_sign_up">Log in or Sign up</string>
    <string name="back">Back</string>
    <string name="continueee">Continueee</string>
    <string name="icon_google">icon google</string>
    <string name="logo_apple">logo apple</string>
    <string name="confirm_password">confirm_password</string>
    <string name="already_have_account_log_in">Already have account? Log in</string>
    <string name="drop_table_if_exist">DROP TABLE IF EXIST %1$s</string>

</resources>