<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tabler_home_filled"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_round_event_note"
        android:title="@string/events" />
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/camera"
        android:title="@string/camera" />
    <item
        android:id="@+id/navigation_notif"
        android:icon="@drawable/notifications_24dp_fill0_wght400_grad0_opsz24"
        android:title="@string/notification"
        android:visible="true" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/person_24dp_fill0_wght400_grad0_opsz24"
        android:title="@string/profile" />
</menu>
