<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/continue_with_username"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/rounded_backgound_1"
        android:elevation="2dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/continue_with_username"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="masukan email"
        android:background="@drawable/shapeprimarybutton"
        android:backgroundTint="@color/inputCoral"
        android:elevation="2dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="masukan password"
        android:background="@drawable/shapeprimarybutton"
        android:backgroundTint="@color/inputCoral"
        android:elevation="2dp"
        android:hint="@string/confirm_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="15dp"
        tools:elevation="2dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="masukan password"
        android:background="@drawable/shapeprimarybutton"
        android:backgroundTint="@color/inputCoral"
        android:elevation="2dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="15dp"
        tools:elevation="2dp" />

    <TextView
        android:id="@+id/regex_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_passwort"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buton_continue_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_backgound"
        android:elevation="2dp"
        android:text="@string/continueee"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="323dp"
        android:text="@string/already_have_account_log_in"
        android:textAlignment="center" />

</LinearLayout>