<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF3EE"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/rounded_backgound_1"
            android:elevation="2dp">

            <TextView
                android:id="@+id/login_or_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.113"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.783" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_or_sign_up"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.783" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="27dp"
                android:layout_height="42dp"
                android:contentDescription="@string/arrows_back"
                android:src="@drawable/arrows"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/login_or_signup"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.855" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="masukan email"
            android:background="@drawable/shapeprimarybutton"
            android:backgroundTint="@color/inputCoral"
            android:elevation="2dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="masukan password"
            android:background="@drawable/shapeprimarybutton"
            android:backgroundTint="@color/inputCoral"
            android:elevation="2dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="15dp"
            tools:elevation="2dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_backgound"
            android:elevation="2dp"
            android:text="@string/continueee"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/forgot_pw"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/forgot_passwort" />

        <TextView
            android:id="@+id/or"
            android:layout_width="158dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/or" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_with_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="53dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_backgound_1"
            android:elevation="2dp">

            <TextView
                android:id="@+id/by_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/continue_with_username"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView15"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="51dp"
                android:layout_height="46dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/logo_coral"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.454" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_with_apple"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="53dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_backgound_1"
            android:elevation="2dp">

            <TextView
                android:id="@+id/by_apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/continue_with_apple"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="56dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/logo_apple"
                android:src="@drawable/apple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_with_google"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="53dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_backgound_1"
            android:elevation="2dp">

            <TextView
                android:id="@+id/by_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/continue_with_google"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView17"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="52dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/icon_google"
                android:src="@drawable/googleicon1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:text="@string/copyright"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Username atau Password salah"
            android:textColor="#FF0000"
            android:visibility="invisible"/>

    </LinearLayout>

</ScrollView>