<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboardingcontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".onBoardingApp">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp"
        android:contentDescription="@string/logo_coral"
        android:src="@drawable/logo_coral"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleOnBoarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:letterSpacing="0.1"
        android:text="@string/connect_each_other"
        android:textColor="@color/primaryCoral"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <TextView
        android:id="@+id/descOnBoarding"
        android:layout_width="wrap_content"
        android:layout_height="113dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/desc_obboarding"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleOnBoarding" />


    <Button
        android:id="@+id/btn_start"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="49dp"
        android:background="@drawable/shapeprimarybutton"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descOnBoarding" />


</androidx.constraintlayout.widget.ConstraintLayout>