<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/continue_with_username"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ContinueWithUsernameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rounded_backgound_1"
        android:elevation="2dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_username"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.783" />

        <!-- Your top layout elements -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="masukan email"
        android:background="@drawable/shapeprimarybutton"
        android:backgroundTint="@color/inputCoral"
        android:elevation="2dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="41dp"
        android:autofillHints="masukan password"
        android:background="@drawable/shapeprimarybutton"
        android:backgroundTint="@color/inputCoral"
        android:elevation="2dp"
        android:hint="@string/confirm_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:elevation="2dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="masukan password"
        android:background="@drawable/shapeprimarybutton"
        android:backgroundTint="@color/inputCoral"
        android:elevation="2dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:elevation="2dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_backgound"
        android:elevation="2dp"
        android:text="@string/continueee"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/forgot_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="323dp"
        android:text="@string/already_have_account_log_in"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/regex_confirm"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="267dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_passwort"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
